argocd/nginx-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
  namespace: test-nginx
spec:
  selector:
    app: nginx-deployment
  ports:
    - port: 80
      targetPort: 80
  type: ClusterIP
